/*
SPDX-FileCopyrightText: 2020-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: LicenseRef-ONF-Member-1.0
*/
syntax = "proto3";

import "ProcedureCode.proto";
import "Criticality.proto";
import "RICsubscriptionFailure.proto";
import "RICsubscriptionDeleteFailure.proto";
import "RICserviceUpdateFailure.proto";
import "RICcontrolFailure.proto";
import "E2setupFailure.proto";

package e2ctypes;
option deprecated = true;

message UnsuccessfulOutcome_t {
    option deprecated = true;
    ProcedureCode_t procedureCode = 1 [deprecated=true];
    Criticality_t criticality = 2 [deprecated=true];
    oneof choice {
        RICsubscriptionFailure_t RICsubscriptionFailure = 3 [deprecated=true];
        RICsubscriptionDeleteFailure_t RICsubscriptionDeleteFailure = 4 [deprecated=true];
        RICserviceUpdateFailure_t RICserviceUpdateFailure = 5 [deprecated=true];
        RICcontrolFailure_t RICcontrolFailure = 6 [deprecated=true];
        E2setupFailure_t E2setupFailure = 7 [deprecated=true];
    }
}
